# FastSwinUNETR

./: FastSwinUNETR3D.py  README.md  SwinAttention.py  basic_layer_2d.py  basic_layer_3d.py  math_utills.py  mlp_block.py  patch_embedding.py  patch_embedding_2d.py  patch_embedding_3d.py  patch_merging.py  profiling.py  pyproject.toml  ref_unet_res_block.py  ref_unetr_up_block.py  swin_transformer_2d.py  swin_transformer_3d.py  swin_transformer_block.py  swin_unter_utils.py  test_swin_attention.py  triton_fa_test.py  triton_fa_updated_test.py  triton_shifted_window_fa.py  unter.py
